--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "bitcore-lib": "^0.15.0",
+    "litecore-lib": "git://github.com/litecoin-project/litecore-lib.git#c94003e8936fd20c5ef64c6956bda7ac185d3cf7",
     "unorm": "^1.3.3"
   }
 }
